@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Previously, using a default with a positional parameter would result in a
+  compile error. Defaults now work with positional parameters.
+
+
 0.14     2016-11-02
 
 - Added a "named_to_list" option to support returning only the parameter
